se agrego nuevas modificaciones

--- a/ibdex2.html
+++ b/ibdex2.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width= , initial-scale=1.0">
-    <title>Proyecto22</title>
-
-    <a href="styl.css"></a>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Buscador de palabras</title>
+    <link rel="stylesheet" href="styl.css">
 </head>
 <body>
-    <div class ="layout">
-        <main clas=""layout_main>
+    <div class="layout">
+        <main class="layout_main">
+            <input type="search" class="main_input" placeholder="Busca una palabra"/>
+            
+            <p class="main_text">
+                En los humedales del mundo, donde el viento roza suavemente la superficie del agua y los juncos se mecen como si contaran secretos antiguos, los patos han reinado durante miles de años. Son aves curiosas, incansables viajeras y adaptables a casi cualquier entorno. Pero lo que pocos imaginan es la enorme diversidad de razas y especies que existen: desde los pequeños patos silvestres de vuelo rápido hasta las majestuosas variedades domésticas criadas por humanos.
 
-            <input type="search" class="main_input" placeholder="busca una palabra"/>
-             <p class="mai_text"> 
-                sabias que el 99 porciento de los <span class="text_search">patos</span>patos hoy en dia son domesticos es decr a oesar de ser  capturados en las areas silvestres estos
-                siguen siendo silbestres y existen muxhas razas de patos como los domesticos que son , cauyugiga, pekin, rouen, mallard, silver aplayerd, moscovi, murlad, 
-                kaki campell, corredor, crestado , ente muchas otras y alguas como madarin , silvestre amade real, carolina etc.
-                son de los mas hermosos la familia anatide se compone de  gansos patos y cosnes, y son unicos 
-             </p>
+                Al amanecer, el primero en aparecer suele ser el Ánade Real (Mallard), el rey de los patos salvajes y el antepasado de la mayoría de las razas domésticas...
+            </p>
 
         </main>
     </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
